Add JavaDocs, refactor, rename classes, extract string constants