@@ -1,5 +1,6 @@
 package rsp.component;
 
+import rsp.component.definitions.StatefulComponent;
 import rsp.dom.*;
 import rsp.dom.Segment;
 import rsp.html.SegmentDefinition;
@@ -7,7 +8,7 @@ import rsp.page.EventContext;
 import rsp.page.RenderContextFactory;
 import rsp.page.events.GenericTaskEvent;
 import rsp.page.events.RemoteCommand;
-import rsp.page.events.SessionEvent;
+import rsp.page.events.Command;
 import rsp.ref.Ref;
 
 import java.util.*;
@@ -17,24 +18,23 @@ import static java.lang.System.Logger.Level.*;
 
 /**
  * Represents a stateful component which is a part of a UI components tree.
- * Components may contain one or more HTML tags and/or other components.
- * Every component is associated with a state snapshot, which is set during initialization and can be updated independently as a result of a user's action on this browser's page or events
- * like timers or services callbacks.
- * A change in a component's state results in re-rendering of the relevant component and all its child components.
- * A key-value context is provided to its child components, which can be used to share information from parent components to its children.
- * Every component has its DOM fragment view, which may contain conditional rendering logic and event handlers.
- * A simpler view is a pure function from an input state to a DOM tree definition.
+ * Components may contain one or more tags starting HTML DOM subtrees and/or other components.
+ * Every component is associated with a state object, managed by the framework.
+ * A component's state is set during initialization and can be updated independently as a result of a user's action on this browser's page
+ * or events like timers or services callbacks.
+ * A change of a component's state results in re-rendering of that component DOM subtree and the subcomponents.
+ * A key-value context is propagated to its child components. This context object can be used to pass information from parent components to its children.
  * All methods of this class must be called from its page's event loop thread.
  *
  * @param <S> a type for this component's state snapshot
  */
-public class Component<S> implements Segment, StateUpdate<S> {
+public class ComponentSegment<S> implements Segment, StateUpdate<S> {
     private final System.Logger logger = System.getLogger(getClass().getName());
 
     protected final ComponentCompositeKey componentId;
-    protected final ComponentContext componentContext;
-    protected final Consumer<SessionEvent> commandsEnqueue;
+    protected final Consumer<Command> commandsEnqueue;
 
+    private final ComponentContext componentContext;
     private final ComponentStateSupplier<S> stateResolver;
     private final BiFunction<ComponentContext, S, ComponentContext> contextResolver;
     private final ComponentMountedCallback<S> componentMountedCallback;
@@ -45,22 +45,39 @@ public class Component<S> implements Segment, StateUpdate<S> {
 
     private final List<DomEventEntry> domEventEntries = new ArrayList<>();
     private final List<ComponentEventEntry> componentEventEntries = new ArrayList<>();
+
     private final Map<Ref, TreePositionPath> refs = new HashMap<>();
-    private final List<Component<?>> children = new ArrayList<>();
+    private final List<ComponentSegment<?>> children = new ArrayList<>();
     private final List<Node> rootNodes = new ArrayList<>();
 
     private TreePositionPath startNodeDomPath;
 
+    /**
+     * This component's current state
+     */
     private S state;
 
-    public Component(final ComponentCompositeKey componentId,
-                     final ComponentStateSupplier<S> stateResolver,
-                     final BiFunction<ComponentContext, S, ComponentContext> contextResolver,
-                     final ComponentView<S> componentView,
-                     final ComponentCallbacks<S> callbacks,
-                     final RenderContextFactory renderContextFactory,
-                     final ComponentContext componentContext,
-                     final Consumer<SessionEvent> commandsEnqueue) {
+    /**
+     * Creates a new instance of a component. To be called in a relevant component's definition class.
+     * @see StatefulComponent<S>
+     *
+     * @param componentId an identity of this component, an object to be used as a key to store and retrieve a current state snapshot
+     * @param stateResolver a function to resolve an initial state
+     * @param contextResolver a function that build a context object that is propagated to descendant components
+     * @param componentView contains DOM subtree definition.
+     * @param callbacks a bundle of this component's life cycle events callbacks
+     * @param renderContextFactory a factory for a render context for children components
+     * @param componentContext a context object from ascendant components
+     * @param commandsEnqueue a consumer for the page's control loop commands
+     */
+    public ComponentSegment(final ComponentCompositeKey componentId,
+                            final ComponentStateSupplier<S> stateResolver,
+                            final BiFunction<ComponentContext, S, ComponentContext> contextResolver,
+                            final ComponentView<S> componentView,
+                            final ComponentCallbacks<S> callbacks,
+                            final RenderContextFactory renderContextFactory,
+                            final ComponentContext componentContext,
+                            final Consumer<Command> commandsEnqueue) {
         this.componentId = Objects.requireNonNull(componentId);
         this.stateResolver = Objects.requireNonNull(stateResolver);
         this.contextResolver = Objects.requireNonNull(contextResolver);
@@ -72,14 +89,18 @@ public class Component<S> implements Segment, StateUpdate<S> {
         this.componentContext = Objects.requireNonNull(componentContext);
         this.commandsEnqueue = Objects.requireNonNull(commandsEnqueue);
 
-        logger.log(TRACE, () -> "New component is created with key " + this);
+        logger.log(TRACE, () -> "New component is created: " + this);
     }
 
+    /**
+     * A path representing a position of this component in the components tree
+     * @return a path in the page's components tree
+     */
     public TreePositionPath path() {
         return componentId.componentPath();
     }
 
-    public void addChild(final Component<?> component) {
+    public void addChild(final ComponentSegment<?> component) {
         children.add(component);
     }
 
@@ -88,7 +109,7 @@ public class Component<S> implements Segment, StateUpdate<S> {
     }
 
     public Node getLastRootNode() {
-        return rootNodes.get(rootNodes.size() - 1);
+        return rootNodes.isEmpty() ? null : rootNodes.getLast();
     }
 
     public void setStartNodeDomPath(final TreePositionPath domPath) {
@@ -127,7 +148,7 @@ public class Component<S> implements Segment, StateUpdate<S> {
     }
 
     @Override
-    public void setState(S newState) {
+    public void setState(final S newState) {
         applyStateTransformation(_ -> newState);
     }
 
@@ -142,7 +163,7 @@ public class Component<S> implements Segment, StateUpdate<S> {
     }
 
     @Override
-    public void applyStateTransformation(UnaryOperator<S> newStateFunction) {
+    public void applyStateTransformation(final UnaryOperator<S> newStateFunction) {
         final S newState = newStateFunction.apply(state);
 
         if (!onBeforeUpdated(newState)) {
@@ -162,7 +183,7 @@ public class Component<S> implements Segment, StateUpdate<S> {
         final Set<DomEventEntry> oldEvents = new HashSet<>(recursiveDomEvents());
         domEventEntries.clear();
 
-        final Set<Component<?>> oldChildren = new HashSet<>(recursiveChildren());
+        final Set<ComponentSegment<?>> oldChildren = new HashSet<>(recursiveChildren());
         children.clear();
 
         logger.log(TRACE, () -> "Component " + this + " old state was " + oldState + " applied new state " + state);
@@ -183,7 +204,6 @@ public class Component<S> implements Segment, StateUpdate<S> {
         commandsEnqueue.accept(new RemoteCommand.ModifyDom(domChangePerformer.commands));
 
         // Unregister events
-        final List<DomEventEntry> eventsToRemove = new ArrayList<>();
         final Set<DomEventEntry> newEvents = new HashSet<>(recursiveDomEvents());
         for (final DomEventEntry event : oldEvents) {
             if (!newEvents.contains(event)
@@ -193,11 +213,11 @@ public class Component<S> implements Segment, StateUpdate<S> {
             }
         }
 
-        // Register new event types on client
+        // Register new events on client-side
         final List<DomEventEntry> eventsToAdd = new ArrayList<>();
         for (final DomEventEntry event : newEvents) {
-            if (!oldEvents.contains(event) && event instanceof DomEventEntry domEventEntry) {
-                eventsToAdd.add(domEventEntry);
+            if (!oldEvents.contains(event)) {
+                eventsToAdd.add(event);
             }
         }
         if (!eventsToAdd.isEmpty()) {
@@ -205,46 +225,45 @@ public class Component<S> implements Segment, StateUpdate<S> {
         }
 
         // Notify unmounted child components
-        final Set<Component<?>> mountedComponents = new HashSet<>(children);
-        for (final Component<?> child : oldChildren) {
+        final Set<ComponentSegment<?>> mountedComponents = new HashSet<>(children);
+        for (final ComponentSegment<?> child : oldChildren) {
             if (!mountedComponents.contains(child)) {
                 child.unmount();
             }
         }
-        onAfterUpdated(oldState, state);
 
+        onAfterUpdated(oldState, state);
     }
 
     protected void onBeforeInitiallyRendered() {
     }
 
-    protected void onAfterMounted(S state) {
+    protected void onAfterMounted(final S state) {
         componentMountedCallback.onComponentMounted(componentId, state, new EnqueueTaskStateUpdate());
     }
 
-    protected void onAfterRendered(S state) {
+    protected void onAfterRendered(final S state) {
     }
 
-    protected boolean onBeforeUpdated(S state) {
+    protected boolean onBeforeUpdated(final S state) {
         return true;
     }
 
-    protected void onAfterUpdated(S oldState, S state) {
+    protected void onAfterUpdated(final S oldState, final S state) {
         componentUpdatedCallback.onComponentUpdated(componentId, oldState, state, new EnqueueTaskStateUpdate());
     }
 
-    protected void onAfterUnmounted(ComponentCompositeKey key, S oldState) {
+    protected void onAfterUnmounted(final ComponentCompositeKey key, final S oldState) {
         componentUnmountedCallback.onComponentUnmounted(componentId, state);
     }
 
-    public List<Component<?>> directChildren() {
+    public List<ComponentSegment<?>> directChildren() {
         return children;
     }
 
     public void unmount() {
         recursiveChildren().forEach(c -> c.unmount());
         onAfterUnmounted(componentId, state);
-
     }
 
     private List<Node> rootNodes() {
@@ -252,17 +271,17 @@ public class Component<S> implements Segment, StateUpdate<S> {
             return rootNodes;
         } else {
             final List<Node> nodes = new ArrayList<>();
-            for (final Component<?> comp : this.children) {
+            for (final ComponentSegment<?> comp : this.children) {
                 nodes.addAll(comp.rootNodes());
             }
             return nodes;
         }
     }
 
-    public List<Component<?>> recursiveChildren() {
-        final List<Component<?>> recursiveChildren = new ArrayList<>();
+    public List<ComponentSegment<?>> recursiveChildren() {
+        final List<ComponentSegment<?>> recursiveChildren = new ArrayList<>();
         recursiveChildren.addAll(children);
-        for (final Component<?> childComponent : children) {
+        for (final ComponentSegment<?> childComponent : children) {
             recursiveChildren.addAll(childComponent.recursiveChildren());
         }
         return recursiveChildren;
@@ -270,7 +289,7 @@ public class Component<S> implements Segment, StateUpdate<S> {
 
     public List<DomEventEntry> recursiveDomEvents() {
         final List<DomEventEntry> recursiveEvents = new ArrayList<>(domEventEntries);
-        for (final Component<?> childComponent : children) {
+        for (final ComponentSegment<?> childComponent : children) {
             recursiveEvents.addAll(childComponent.recursiveDomEvents());
         }
         return recursiveEvents;
@@ -278,7 +297,7 @@ public class Component<S> implements Segment, StateUpdate<S> {
 
     public List<ComponentEventEntry> recursiveComponentEvents() {
         final List<ComponentEventEntry> recursiveEvents = new ArrayList<>(componentEventEntries);
-        for (final Component<?> childComponent : children) {
+        for (final ComponentSegment<?> childComponent : children) {
             recursiveEvents.addAll(childComponent.recursiveComponentEvents());
         }
         return recursiveEvents;
@@ -287,7 +306,7 @@ public class Component<S> implements Segment, StateUpdate<S> {
 
     public Map<Ref, TreePositionPath> recursiveRefs() {
         final Map<Ref, TreePositionPath> recursiveRefs = new HashMap<>(refs);
-        for (Component<?> childComponent : children) {
+        for (ComponentSegment<?> childComponent : children) {
             recursiveRefs.putAll(childComponent.recursiveRefs());
         }
         return recursiveRefs;
@@ -329,10 +348,10 @@ public class Component<S> implements Segment, StateUpdate<S> {
     }
 
     @Override
-    public boolean equals(Object o) {
+    public boolean equals(final Object o) {
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
-        Component<?> component = (Component<?>) o;
+        ComponentSegment<?> component = (ComponentSegment<?>) o;
         return componentId.equals(component.componentId);
     }
 
@@ -343,30 +362,30 @@ public class Component<S> implements Segment, StateUpdate<S> {
 
     private final class EnqueueTaskStateUpdate implements StateUpdate<S> {
         @Override
-        public void setState(S newState) {
+        public void setState(final S newState) {
             commandsEnqueue.accept(new GenericTaskEvent(() -> {
-                Component.this.setState(newState);
+                ComponentSegment.this.setState(newState);
             }));
         }
 
         @Override
-        public void setStateWhenComplete(S newState) {
+        public void setStateWhenComplete(final S newState) {
             commandsEnqueue.accept(new GenericTaskEvent(() -> {
-                Component.this.setStateWhenComplete(newState);
+                ComponentSegment.this.setStateWhenComplete(newState);
             }));
         }
 
         @Override
-        public void applyStateTransformation(UnaryOperator<S> stateTransformer) {
+        public void applyStateTransformation(final UnaryOperator<S> stateTransformer) {
             commandsEnqueue.accept(new GenericTaskEvent(() -> {
-                Component.this.applyStateTransformation(stateTransformer);
+                ComponentSegment.this.applyStateTransformation(stateTransformer);
             }));
         }
 
         @Override
-        public void applyStateTransformationIfPresent(Function<S, Optional<S>> stateTransformer) {
+        public void applyStateTransformationIfPresent(final Function<S, Optional<S>> stateTransformer) {
             commandsEnqueue.accept(new GenericTaskEvent(() -> {
-                Component.this.applyStateTransformationIfPresent(stateTransformer);
+                ComponentSegment.this.applyStateTransformationIfPresent(stateTransformer);
             }));
         }
     }
